--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-native-picker/picker": "2.4.10",
+    "expo": "~49.0.11",
+    "expo-constants": "^14.4.2",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.13",
+    "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
