--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "yup": "^1.3.3"
+    "react-native-maps": "1.7.1",
+    "yup": "^1.3.3",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
