--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "~49.0.11",
     "expo-constants": "^14.4.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
     "formik": "^2.4.5",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
-    "yup": "^1.3.3",
-    "expo-location": "~16.1.0"
+    "react-native-maps-directions": "^1.9.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
