--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "expo": "~49.0.11",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "^14.4.2",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
@@ -27,6 +30,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-pager-view": "6.2.0",
+    "react-native-tab-view": "^3.5.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
