--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-pager-view": "6.2.0",
+    "react-native-super-grid": "^5.0.0",
     "react-native-tab-view": "^3.5.2",
     "yup": "^1.3.3"
   },
