--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-updates": "~0.18.13",
     "formik": "^2.4.5",
     "geolib": "^3.3.4",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
