--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/slider": "4.4.2",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
@@ -21,6 +21,7 @@
     "expo": "~49.0.11",
     "expo-checkbox": "~2.4.0",
     "expo-constants": "^14.4.2",
+    "expo-image-picker": "^14.7.1",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
@@ -29,6 +30,8 @@
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-config": "^1.5.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
