--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "^2.4.10",
