--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "apisauce": "^3.0.1",
+    "axios": "^1.6.8",
     "expo": "~49.0.11",
     "expo-checkbox": "~2.4.0",
     "expo-constants": "^14.4.2",
