--- a/package.json
+++ b/package.json
@@ -45,5 +45,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
+  "optionalDependencies": {
+    "sharp": "^0.33.2"
+  },
+  "os": [
+    "linux"
+  ],
+  "cpu": [
+    "x64"
+  ],
   "private": true
 }
