--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
@@ -18,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "@testing-library/react-native": "^12.4.5",
     "apisauce": "^3.0.1",
     "axios": "^1.6.8",
     "expo": "~49.0.11",
@@ -29,6 +37,8 @@
     "expo-updates": "~0.18.13",
     "formik": "^2.4.5",
     "geolib": "^3.3.4",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -40,19 +50,12 @@
     "react-native-pager-view": "6.2.0",
     "react-native-super-grid": "^5.0.0",
     "react-native-tab-view": "^3.5.2",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
   "optionalDependencies": {
     "sharp": "^0.33.2"
-  },
-  "os": [
-    "linux"
-  ],
-  "cpu": [
-    "x64"
-  ],
-  "private": true
+  }
 }
